--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,20 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    I love Sarita
-  </h1>
-</div>
+
+
+<nav>
+    <div class="nav-wrapper">
+      <a class="brand-logo">{{ title }}</a>
+    </div>
+</nav>
+  
 
 <div #gmap style="width:100%;height:400px"></div>
+
+
+<div class="col-md-3 col-sm-12 col-xs-12">
+  <button (click)="setMapType('terrain')" class="btn btn-primary">Terrain</button>
+  <button (click)="setMapType('satellite')" class="btn btn-danger">Satellite</button>
+  <button (click)="setMapType('roadmap')" class="btn btn-warning">Road Map</button>
+  <button (click)="setMapType('hybrid')" class="btn btn-warning">Hybrid</button>
+  <button (click)="findMe()" class="btn btn-warning">find me</button>
+  <button (click)="showPositionFin()" class="btn btn-warning">posicion final</button>
+</div>
