--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,50 @@
-
-
 <nav>
     <div class="nav-wrapper">
       <a class="brand-logo">{{ title }}</a>
     </div>
 </nav>
+ <!-- Navbar goes here -->
+
+    <!-- Page Layout here -->
+    <div class="row">
+
+      <div class="col s2"><h3>Ordenes</h3>
+        <!-- Grey navigation panel -->
+
+        <div class="collection" *ngFor=" let product of products">
+          <button (click)="showProduct(product)">{{product.name}}</button> 
+          
+       
+        </div><br>
+      </div>
+		  
+
+      <div class="col s9" >
+        <!-- Teal page content  -->
+        <br/>
+		    <div  #map style="width:100%;height:400px"></div>
+      </div>
+      
+        <div class="col s3">
+         
+         </div>
+      
+      <div class="col s9" *ngIf="show">
+        <!-- Teal page content  -->
+        <h4>Detalles de la Orden</h4>
+		    <h5>Name: {{product.name}}</h5>
+        <p><strong>ID: </strong>{{product.id}} </p>
+        <p><strong>Categoria: </strong>{{product.category.name}} </p>
+        <p><strong>Dir: </strong>{{final.lat}}-{{final.lng}}</p>
+      </div>
+	
+	</div>
+
+
+
+
   
 
-<div #gmap style="width:100%;height:400px"></div>
 
+  
 
-<div class="col-md-3 col-sm-12 col-xs-12">
-  <button (click)="setMapType('terrain')" class="btn btn-primary">Terrain</button>
-  <button (click)="setMapType('satellite')" class="btn btn-danger">Satellite</button>
-  <button (click)="setMapType('roadmap')" class="btn btn-warning">Road Map</button>
-  <button (click)="setMapType('hybrid')" class="btn btn-warning">Hybrid</button>
-  <button (click)="findMe()" class="btn btn-warning">find me</button>
-  <button (click)="showPositionFin()" class="btn btn-warning">posicion final</button>
-</div>
