--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
         <!-- Grey navigation panel -->
 
         <div class="collection" *ngFor=" let product of products">
-          <button class="btn waves-effect waves-light" (click)="showProduct(product)">{{product.name}}</button> 
+          <button class="btn waves-effect waves-light" (click)="showProduct(product);">{{product.name}}</button> 
           
        
         </div><br>
